Move to using a form factory for the UserForm
This lets us hide the username field to prevent it from being
edited by users already exist in the ldap directory.

--- a/mango/users/templates/users/update-user.html
+++ b/mango/users/templates/users/update-user.html
@@ -20,5 +20,8 @@
 {% with form.helper as helper %}
     {% uni_form form helper %}
 {% endwith %}
+{% comment %}
+{{ form.as_table }}
+{% endcomment %}
 </div><br>
 {% endblock %}
