Make the omni-search box use /search

--- a/mango/templates/header-snippet.html
+++ b/mango/templates/header-snippet.html
@@ -26,16 +26,13 @@
   </div>
  </div>
 
- <!--
  <div class="right">
-  <form role="search" method="get" id="searchform" action="http://www.gnome.org/" >
+  <form role="search" method="get" id="searchform" action="/search" >
    <div>
-    <label class="hidden" for="s">Search: </label><input type="text" value="" name="s" id="s" placeholder="Search" />
+    <label class="hidden" for="q">Search: </label><input type="text" value="" name="q" id="s" placeholder="Search" />
    </div>
   </form>
    </div>
-  -->
-
 </div>
 
 </div>
