Adding all of the search magic for ftp/http mirrors
    - Added mirrors.search_indexes
    - Updated the search.html template
    - Added a text template for haystack to pick up

--- a/mango/templates/search/search.html
+++ b/mango/templates/search/search.html
@@ -25,6 +25,9 @@
                 {% if result.content_type == "requests.accountrequest" %}
                 <span>Account request for <a href="{{ result.object.get_absolute_url }}">{{ result.cn|title }}</a></span><br>
                 {% endif %}
+                {% if result.content_type == "mirrors.ftpmirror" %}
+                <span>FTP Mirror <a href="{{ result.object.get_absolute_url }}">{{ result.name|title }}</a></span><br>
+                {% endif %}
             {% empty %}
                 No results found.<br>
             {% endfor %}
