--- a/mango/templates/search/search.html
+++ b/mango/templates/search/search.html
@@ -1,11 +1,15 @@
 {% extends 'base.html' %}
-
+{% load i18n %}
+{% block breadcrumb %}{{ block.super }} &raquo; <a href="{% url haystack_search %}">{% trans "Search" %}</a>{% if not query %}</a>{% else %} &raquo; {{ query }}{% endif %}{% endblock %}
 {% block content %}
 {{ block.super }}
     <h2>Search</h2>
 
     <form method="get" action=".">
         <table>
+            {% comment %}
+            # TODO: Make this search form a uni_form version with the pretty
+            {% endcomment %}
             {{ form.as_table }}
             <tr>
                 <td>&nbsp;</td>
