--- a/mango/templates/header-snippet.html
+++ b/mango/templates/header-snippet.html
@@ -7,7 +7,7 @@
 </div>
 <!-- end global gnome.org domain bar -->
 <div id="header" class="container_12">
-
+<br>
 <div id="logo" class="grid_3">
  <h1><a title="{% trans "Go to GNOME Project homepage" %}" href="http://www.gnome.org"><img src="{{ MEDIA_URL }}img/logo/gnome-logo.png" alt="GNOME: {% trans "The Free Software Desktop Project" %}" /></a></h1>
 </div>
@@ -27,7 +27,7 @@
  </div>
 
  <div class="right">
-  <form role="search" method="get" id="searchform" action="/search" >
+  <form role="search" method="get" id="searchform" action="{% url haystack_search %}" >
    <div>
     <label class="hidden" for="q">Search: </label><input type="text" value="" name="q" id="s" placeholder="Search" />
    </div>
