Add the currently logged in user to the nav menu
    - Eventually there will be a preferences page for each user

--- a/mango/templates/header-snippet.html
+++ b/mango/templates/header-snippet.html
@@ -21,7 +21,9 @@
     <li id="menu-item-1037" class="menu-item{% if current == "requests" %} current-menu-item{% endif %}"><a href="{% url requests-index %}">{% trans "Account Requests" %}</a></li>
     <li id="menu-item-1040" class="menu-item{% if current == "modules" %} current-menu-item{% endif %}"><a href="#">{% trans "VCS Modules" %}</a></li>
     <li id="menu-item-1038" class="menu-item{% if current == "mirrors" %} current-menu-item{% endif %}"><a href="{% url mirrors-index %}">{% trans "Mirrors" %}</a></li>
-    <li id="menu-item-1038" class="menu-item"><a href="#">{% trans "Logout" %}</a></li>
+    {% if user.is_authenticated %}
+    <li id="menu-item-1038" class="menu-item"><a href="#">{% trans "User" %} {{ user.full_name }}</a></li>
+    {% endif %}
    </ul>
   </div>
  </div>
