More minor updates to the members application

--- a/mango/members/templates/members/index.html
+++ b/mango/members/templates/members/index.html
@@ -12,7 +12,7 @@ $('.dataTables_length').after('<div id="add-record"><a href="{% url users-add %}
  <th>{% trans "Email" %}</th>
 {% endblock %}
 {% block above_table %}
-<h2 class="center">{% trans "User Management" %}</h2>
+<h2 class="center">{% trans "Foundation Member Management" %}</h2>
 {% endblock %}
 {% block tbody %}
 {% comment %}
