--- a/mango/members/templates/members/breadcrumb_snippet.html
+++ b/mango/members/templates/members/breadcrumb_snippet.html
@@ -1,3 +1,3 @@
 {% extends "breadcrumb_snippet.html" %}
 {% load i18n %}
-{% block breadcrumb %}{{ block.super }} &raquo; {% if not members-index %}<a href="{% url members-index %}">{% endif %}{% trans "Foundation Members" %}{% if not members-index %}</a>{% endif %}{% endblock %}
+{% block breadcrumb %}{{ block.super }} &raquo; {% if not members_index %}<a href="{% url members-index %}">{% endif %}{% trans "Foundation Members" %}{% if not members_index %}</a>{% endif %}{% endblock %}
